<resources>
    <string name="app_name">Kaidah</string>
    <string name="nama_pengguna">Nama Pengguna...</string>
    <string name="kata_sandi">Kata Sandi...</string>
    <string name="buat_akun">Buat Akun?</string>
    <string name="lewati"><![CDATA[Lewati >>]]></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ya">Ya</string>
    <string name="tidak">Tidak</string>
    <string name="profil">Profil</string>
    <string name="keluar">Keluar</string>
    <string name="nama_lengkap_pengguna">Nama Lengkap Pengguna</string>
    <string name="alamat_e_mail_pengguna">Alamat E-mail Pengguna</string>
    <string name="nomor_telepon_pengguna">Nomor Telepon Pengguna</string>
    <string name="alamat_pengguna">Alamat Pengguna</string>
    <string name="k">K</string>
    <string name="aidah">AIDAH</string>
    <string name="share">berbagi</string>
    <string name="image_highlight">tentang gambar</string>
    <string name="source">Sumber</string>
    <string name="source_detail">Detail Anggota JDHIN</string>
    <string name="type">Tipe</string>
    <string name="kind_regulation">Jenis Regulasi</string>
    <string name="number_regulation">Nomor Regulasi</string>
    <string name="title_regulation">Judul Regulasi</string>
    <string name="place_of_determination">Tempat Penetapan</string>
    <string name="date_of_determination">Tanggal Penetapan</string>
    <string name="release_date">Tanggal Perilisan</string>
    <string name="status">Status</string>
    <string name="history">Riwayat</string>
    <string name="back">kembali</string>
    <string name="for_download" translatable="false">for download</string>
    <string name="image_for_title" translatable="false">image for title</string>
    <string name="title_detail">Regulation Detail</string>
    <string name="page_regulation">Page Regulation</string>
    <string name="subject_regulation">Subject Regulation</string>
    <string name="page_subject">Page Subject</string>
</resources>