<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".datadetail.DetailActivity"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="vertical"
        tools:targetApi="p">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/image_for_title"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:src="@drawable/background_title_1"
                app:layout_collapseMode="parallax" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/Toolbar"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:contentInsetStart="0dp"
                app:layout_collapseMode="pin">

                <Button
                    android:id="@+id/shareToolbar"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="20dp"
                    android:theme="@style/Theme.AppCompat.Light"
                    android:background="@drawable/ic_baseline_share_24" />

                <TextView
                    android:id="@+id/textToolbar"
                    style="@style/whiteTitleText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10sp" />
            </androidx.appcompat.widget.Toolbar>

            <View
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_gravity="bottom"
                android:background="@drawable/bg_detail_title" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="10dp"
            android:orientation="vertical">

            <TextView
                style="@style/textTitleDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/source" />

            <TextView
                android:id="@+id/source"
                style="@style/textViewDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <View
                style="@style/view"
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <TextView
                style="@style/textTitleDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="Subjek" />

            <TextView
                android:id="@+id/source_detail"
                style="@style/textViewDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <View
                style="@style/view"
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <TextView
                style="@style/textTitleDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/type" />

            <TextView
                android:id="@+id/type"
                style="@style/textViewDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <View
                style="@style/view"
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <TextView
                style="@style/textTitleDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="Link Regulasi" />

            <TextView
                android:id="@+id/kind_regulation"
                style="@style/textViewDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:linksClickable="true"/>

            <View
                style="@style/view"
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <TextView
                style="@style/textTitleDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/number_regulation" />

            <TextView
                android:id="@+id/number"
                style="@style/textViewDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <View
                style="@style/view"
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <TextView
                style="@style/textTitleDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/title_regulation" />

            <TextView
                android:id="@+id/title"
                style="@style/textViewDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                 />

            <View
                style="@style/view"
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <TextView
                style="@style/textTitleDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/place_of_determination" />

            <TextView
                android:id="@+id/place_determination"
                style="@style/textViewDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <View
                style="@style/view"
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <TextView
                style="@style/textTitleDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/date_of_determination" />

            <TextView
                android:id="@+id/date_determination"
                style="@style/textViewDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <View
                style="@style/view"
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <TextView
                style="@style/textTitleDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="Tanggap Pengundangan" />

            <TextView
                android:id="@+id/date_release"
                style="@style/textViewDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <View
                style="@style/view"
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <TextView
                style="@style/textTitleDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/status" />

            <TextView
                android:id="@+id/status"
                style="@style/textViewDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <View
                style="@style/view"
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <TextView
                style="@style/textTitleDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/history" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_history123"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <View
                style="@style/view"
                android:layout_width="match_parent"
                android:layout_height="1dp" />

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabutton"
        android:layout_width="57dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="30sp"
        android:layout_marginBottom="30sp"
        android:backgroundTint="@color/white"
        app:borderWidth="0dp"
        android:src="@drawable/ic_baseline_download_for_offline_24"
        android:contentDescription="@string/for_download" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>