<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/smoke"
    tools:context=".fragment.ProfileFragment">

    <RelativeLayout android:id="@+id/title" android:layout_width="match_parent" android:layout_height="70dp" android:background="@color/white">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true" android:textSize="25sp" android:textStyle="bold" android:layout_marginStart="20dp" android:textColor="@color/black" android:fontFamily="monospace" android:text="Profile"/>
        <ImageView android:layout_width="40dp" android:layout_height="40dp" android:id="@+id/ivSetting" android:layout_centerVertical="true" android:layout_alignParentEnd="true" android:layout_marginEnd="20dp" android:src="@drawable/setting"/>
    </RelativeLayout>
    <RelativeLayout android:layout_width="match_parent" android:layout_height="3dp" android:id="@+id/garis" android:background="@color/donker" android:layout_below="@+id/title"/>

    <androidx.core.widget.NestedScrollView android:layout_below="@+id/garis" android:fillViewport="true" android:layout_width="match_parent" android:layout_height="match_parent">
        <RelativeLayout android:id="@+id/space" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_below="@+id/title">

            <RelativeLayout android:visibility="gone" android:id="@+id/spaceSetting" android:layout_width="match_parent" android:layout_height="match_parent" android:background="@color/white" android:paddingTop="1dp" android:paddingBottom="1dp">
                <LinearLayout android:id="@+id/btnEditProfile" android:layout_width="match_parent" android:layout_height="wrap_content" android:gravity="center_vertical" android:layout_alignParentTop="true" android:layout_marginStart="20dp" android:layout_marginEnd="20dp" android:layout_marginTop="20dp" android:orientation="horizontal">
                    <ImageView android:layout_width="30dp" android:layout_height="30dp" android:src="@drawable/edit"/>
                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Edit Profil" android:textColor="@color/black" android:textSize="18sp" android:layout_marginStart="10dp"/>
                </LinearLayout>
                <LinearLayout android:id="@+id/btnChangePremium" android:layout_below="@+id/btnEditProfile" android:layout_width="match_parent" android:layout_height="wrap_content" android:gravity="center_vertical" android:layout_marginStart="20dp" android:layout_marginEnd="20dp" android:layout_marginTop="20dp" android:orientation="horizontal">
                    <ImageView android:layout_width="30dp" android:layout_height="30dp" android:src="@drawable/premium"/>
                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Premium" android:textColor="@color/black" android:textSize="18sp" android:layout_marginStart="10dp"/>
                </LinearLayout>
                <LinearLayout android:id="@+id/btnFollowedMember" android:layout_below="@+id/btnChangePremium" android:layout_width="match_parent" android:layout_height="wrap_content" android:gravity="center_vertical" android:layout_marginStart="20dp" android:layout_marginEnd="20dp" android:layout_marginTop="20dp" android:orientation="horizontal">
                    <ImageView android:layout_width="30dp" android:layout_height="30dp" android:src="@drawable/favorited"/>
                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Anggota JDHIN Yang Diikuti" android:textColor="@color/black" android:textSize="18sp" android:layout_marginStart="10dp"/>
                </LinearLayout>

                <LinearLayout android:layout_width="match_parent" android:layout_height="3dp" android:layout_above="@+id/btnSignout" android:background="@color/donker"/>
                <LinearLayout android:id="@+id/btnSignout" android:layout_width="match_parent" android:layout_height="wrap_content" android:gravity="center_vertical" android:layout_alignParentBottom="true" android:padding="20dp" android:orientation="horizontal">
                    <ImageView android:layout_width="30dp" android:layout_height="30dp" android:src="@drawable/logout"/>
                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Keluar Sebagai Pengguna" android:textColor="@color/black" android:textSize="18sp" android:layout_marginStart="10dp"/>
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout android:id="@+id/spaceProfil" android:layout_width="match_parent" android:layout_height="match_parent">
                <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:padding="10dp" android:orientation="vertical" android:layout_alignParentEnd="true" android:background="@drawable/border_item_rv" android:gravity="center">
                    <TextView android:id="@+id/tvUserRole" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textColor="@color/black" android:textStyle="bold" android:textSize="14sp" android:text="Non-Premium"/>
                </LinearLayout>

                <RelativeLayout android:id="@+id/head" android:orientation="horizontal" android:layout_marginStart="20dp" android:layout_marginEnd="20dp" android:layout_marginTop="40dp" android:layout_marginBottom="40dp" android:layout_width="match_parent" android:layout_height="wrap_content">
                    <RelativeLayout android:paddingStart="10dp" android:paddingEnd="0dp" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
                        <TextView android:textColor="@color/black" android:gravity="start" android:id="@+id/tvName" android:text="@string/nama_lengkap_pengguna" android:textStyle="bold" android:textSize="18sp" android:layout_width="match_parent" android:layout_height="wrap_content"/>
                        <TextView android:textColor="@color/black" android:gravity="start" android:layout_below="@+id/tvName" android:id="@+id/tvInfo" android:text="Email" android:textSize="12sp" android:layout_width="match_parent" android:layout_height="wrap_content"/>
                    </RelativeLayout>
                </RelativeLayout>

                <LinearLayout android:id="@+id/body" android:layout_below="@+id/head" android:layout_width="match_parent" android:layout_height="wrap_content" android:padding="20dp" android:orientation="vertical" android:background="@color/white">
                    <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:textColor="@color/black" android:text="Nama Lengkap"/>
                    <LinearLayout android:layout_width="match_parent" android:layout_height="40dp" android:layout_marginTop="5dp" android:orientation="horizontal" android:background="@drawable/border_1dp" android:gravity="center_vertical">
                        <LinearLayout android:layout_width="40dp" android:layout_height="match_parent" android:gravity="center" android:layout_marginTop="1dp" android:layout_marginBottom="1dp" android:layout_marginEnd="0dp" android:layout_marginStart="1dp" android:background="#AFAFAF">
                            <ImageView android:layout_width="20dp" android:layout_height="20dp" android:background="@drawable/user"/>
                        </LinearLayout>
                        <EditText android:id="@+id/edName" android:text="@string/nama_lengkap_pengguna" android:textSize="12sp" android:hint="@string/nama_lengkap_pengguna" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginTop="1dp" android:layout_marginBottom="1dp" android:layout_marginEnd="1dp" android:layout_marginStart="0dp" android:inputType="none"  android:focusable="false" android:clickable="false" android:paddingStart="10dp" android:paddingEnd="10dp" android:background="#DCDCDC"/>
                    </LinearLayout>
                    <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:textColor="@color/black" android:text="Alamat E-mail" android:layout_marginTop="20dp"/>
                    <LinearLayout android:layout_width="match_parent" android:layout_height="40dp" android:layout_marginTop="5dp" android:orientation="horizontal" android:background="@drawable/border_1dp" android:gravity="center_vertical">
                        <LinearLayout android:layout_width="40dp" android:layout_height="match_parent" android:gravity="center" android:layout_marginTop="1dp" android:layout_marginBottom="1dp" android:layout_marginEnd="0dp" android:layout_marginStart="1dp" android:background="#AFAFAF">
                            <ImageView android:layout_width="20dp" android:layout_height="20dp" android:background="@drawable/email"/>
                        </LinearLayout>
                        <EditText android:id="@+id/edEmail" android:text="@string/alamat_e_mail_pengguna" android:textSize="12sp" android:hint="@string/alamat_e_mail_pengguna" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginTop="1dp" android:layout_marginBottom="1dp" android:layout_marginEnd="1dp" android:layout_marginStart="0dp" android:inputType="none"  android:focusable="false" android:clickable="false" android:paddingStart="10dp" android:paddingEnd="10dp" android:background="#DCDCDC"/>
                    </LinearLayout>
                    <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:textColor="@color/black" android:text="Nomor Telepon" android:layout_marginTop="20dp"/>
                    <LinearLayout android:layout_width="match_parent" android:layout_height="40dp" android:layout_marginTop="5dp" android:orientation="horizontal" android:background="@drawable/border_1dp" android:gravity="center_vertical">
                        <LinearLayout android:layout_width="40dp" android:layout_height="match_parent" android:gravity="center" android:layout_marginTop="1dp" android:layout_marginBottom="1dp" android:layout_marginEnd="0dp" android:layout_marginStart="1dp" android:background="#AFAFAF">
                            <ImageView android:layout_width="20dp" android:layout_height="20dp" android:background="@drawable/telephone"/>
                        </LinearLayout>
                        <EditText android:id="@+id/edPhone" android:text="@string/nomor_telepon_pengguna" android:textSize="12sp" android:hint="@string/nomor_telepon_pengguna" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginTop="1dp" android:layout_marginBottom="1dp" android:layout_marginEnd="1dp" android:layout_marginStart="0dp" android:inputType="none"  android:focusable="false" android:clickable="false" android:paddingStart="10dp" android:paddingEnd="10dp" android:background="#DCDCDC"/>
                    </LinearLayout>
                    <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:textColor="@color/black" android:text="Alamat" android:layout_marginTop="20dp"/>
                    <LinearLayout android:layout_width="match_parent" android:layout_height="40dp" android:layout_marginTop="5dp" android:layout_marginBottom="10dp" android:orientation="horizontal" android:background="@drawable/border_1dp" android:gravity="center_vertical">
                        <LinearLayout android:layout_width="40dp" android:layout_height="match_parent" android:gravity="center" android:layout_marginTop="1dp" android:layout_marginBottom="1dp" android:layout_marginEnd="0dp" android:layout_marginStart="1dp" android:background="#AFAFAF">
                            <ImageView android:layout_width="20dp" android:layout_height="20dp" android:background="@drawable/address"/>
                        </LinearLayout>
                        <EditText android:id="@+id/edAddress" android:text="@string/alamat_pengguna" android:textSize="12sp" android:hint="@string/alamat_pengguna" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginTop="1dp" android:layout_marginBottom="1dp" android:layout_marginEnd="1dp" android:layout_marginStart="0dp" android:inputType="none"  android:focusable="false" android:clickable="false" android:paddingStart="10dp" android:paddingEnd="10dp" android:background="#DCDCDC"/>
                    </LinearLayout>
                </LinearLayout>
            </RelativeLayout>

        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>

